--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@ body {
 						</a>
 					</div>
 				</div>
-					<div class="col-md-4">
+				<div class="col-md-4">
 					<div class="thumbnail portfolio-thumbnail">
-						<a href="portfolio/salmonrun.html">
-							<img src="assets/salmonrun.PNG" alt="The Salmon Run" />
+						<a href="portfolio/SalmonRun.html">
+							<img src="assets/salmonrun.PNG" alt="The Salmon Run"/>
 						</a>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="thumbnail portfolio-thumbnail">
 						<a href="portfolio/ShadedRelief.html">
-							<img src="assets/shadedrelief_clip.PNG" alt="Shaded Relief" />
+							<img src="assets/shadedrelief_clip.PNG" alt="Shaded Relief"/>
 						</a>
 					</div>
 				</div>
