--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang = "en">
+<html>
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,8 +13,14 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-    background-color: darkgray;
+    background:linear-gradient(darkgray, white) no-repeat center center fixed;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
+
 
 .topnav {
   overflow: hidden;
@@ -41,6 +47,7 @@ body {
 }
 </style>
 </head>
+
 <body>
 
 <div class="topnav">
@@ -58,8 +65,7 @@ body {
 
     <div class="container">
       <div class="row">
-          <h3><strong>Email:</strong> merlini@wisc.edu</h2>
-    
+          <h3><strong>Email:</strong><a class="hyplink" href="mailto:merlini@wisc.edu?Subject=contact%20about%20cv"></strong> merlini@wisc.edu</a></h2>
           <h3><strong>GitHub:</strong> merlinimichael</h2>
       </div>
     </div>
