--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang = "en">
+<html>
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,35 +10,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <style>
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-    background-color: darkgray;
-}
 
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: greenyellow;
-  color: white;
-}
 </style>
 </head>
 <body>
@@ -52,9 +24,10 @@ body {
 </div>
 
 <div style="padding-left:">
-  <h2><center>MICHAEL MERLINI</center></h2>
+    <h2><center>MICHAEL MERLINI</center></h2>
   <p><center>Geographic Information Systems, Geographer, Global Position System Specialist</center></p>
 </div>
+
 <div class="container">
 			<div class="row">
 				<div class="col-md-3">
