--- a/portfolio/SalmonRun.html
+++ b/portfolio/SalmonRun.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang = "en">
+<html>
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +13,12 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-    background-color: darkgray;
+    background:linear-gradient(darkgray, white) no-repeat center center fixed;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .topnav {
