--- a/about.html
+++ b/about.html
@@ -29,24 +29,26 @@
 </div>
 <h1>Hello, Who am I you ask?</h1>
     <br>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-3 col-md-offset-0 col-sm-3 col-sm-offset-8 col-xs-6 col-xs-offset-3">
-					<img src="assets/photo1.PNG" alt="bridgeboard" id="about-world" />
-				</div>
-                <div class="col-md-9 col-md-offset-0 col-sm-9 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-		
-                <p>
-                Hello, my name is Michael Merlini. I am a physical geographer currently studying at University of Wisconsin-Madison for GIS and Web Programming. I have previously attend Minnesota State University Mankato for my undergraduate and graduate degrees.
-                <br>
-				I am well-organized and reliably self-motivated individual, with Geographic Inoformation Systems, Global Position System, Remote Sensing and Cartographic training and experience. A quick learner, who can extract and organize relevant information for research and efficiently manage multiple projects with excellent professional communication skills. Read all about my <a href="resume.html">background and experience</a>.
-                </p>
+    <div class = "columnwrapper">
+        <div class = "pwrapper">
+		      <br>
+            <br>
+            <p>Hello, my name is Michael Merlini. I am a physical geographer currently studying at University of Wisconsin-Madison for GIS and Web Programming. I have previously attend Minnesota State University Mankato for my undergraduate and graduate degrees.</p>
+            <br>
+            <p>I am well-organized and reliably self-motivated individual, with Geographic Inoformation Systems, Global Position System, Remote Sensing and Cartographic training and experience. A quick learner, who can extract and organize relevant information for research and efficiently manage multiple projects with excellent professional communication skills. Read all about my <a href="resume.html">background and experience</a>.
+            </p>
+            
+            <br>
+            
             <p>
 				In my free time I enjoy running, chocolate milk (the real reason why I run), snow boarding, playing and watching sports and the great outdoors. Any chance I get, you'll find me enjoying the outdoors either fishing, camping, or just grilling out. 
                 </p>
             <p>
 				Would you like to talk? <a href="contact.html">Get in touch.</a>
             </p>
+        </div>
+		<div class="imagewrapper">
+			<img class ="profpic" src = "assets/photo1.PNG" alt="bridgeboard">
         </div>
     </div>
 
