--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
         <meta name="keywords" content="Cartography, GIS, GPS"/>
         <title>Michael Merlini | Contact</title>
 
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <style>
@@ -69,7 +69,12 @@ body {
           <h3><strong>GitHub:</strong> merlinimichael</h2>
       </div>
     </div>
-  
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <footer>
     <p>© michaelmerlini</p>
     <p>last updated: april 2, 2018</p>
