--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="keywords" content="Cartography, GIS, GPS"/>
         <title>Michael Merlini | Home</title>
 
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <style>
