--- a/portfolio/HuntinFishin.html
+++ b/portfolio/HuntinFishin.html
@@ -11,14 +11,7 @@
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <style>
 body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-        background:linear-gradient(darkgray, white) no-repeat center center fixed;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+background-color: darkgray
 }
 
 .topnav {
