--- a/portfolio/HuntinFishin.html
+++ b/portfolio/HuntinFishin.html
@@ -60,7 +60,7 @@ background-color: darkgray
 			</div>
 			<div class="row">
 				<div class="col-md-12 portfolio-image">
-					<a href="../assets/HuntinFishinbyCounty.PNG"><img src="../assets/HuntinFishinbyCounty.PNG" alt="Huntin' and Fishin' by County in Minnesota 2000" class="center-block img-responsive"/></a>
+					<a href="../assets/HuntinFishinbyCounty.PNG"><img src="../assets/HuntinFishinbyCounty.PNG" width = "500" alt="Huntin' and Fishin' by County in Minnesota 2000" class="center-block img-responsive"/></a>
 				</div>
 			</div>
 		</div>
