--- a/about.html
+++ b/about.html
@@ -29,9 +29,8 @@
 </div>
 <h1>Hello, Who am I you ask?</h1>
     <br>
-    <div class = "columnwrapper">
-        <div class = "pwrapper">
-		      <br>
+    <div>
+		    <br>
             <br>
             <p>Hello, my name is Michael Merlini. I am a physical geographer currently studying at University of Wisconsin-Madison for GIS and Web Programming. I have previously attend Minnesota State University Mankato for my undergraduate and graduate degrees.</p>
             <br>
@@ -47,8 +46,12 @@
 				Would you like to talk? <a href="contact.html">Get in touch.</a>
             </p>
         </div>
-		<div class="imagewrapper">
-			<img class ="profpic" src = "assets/photo1.PNG" alt="bridgeboard">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3 col-md-offset-0 col-sm-3 col-sm-offset-0 col-xs-6 col-xs-offset-3">
+					<img src="assets/photo1.PNG" alt="world icon" class="img-responsive center-block" id="about-world" />
+				</div>
+				<div class="col-md-9 col-md-offset-0 col-sm-9 col-sm-offset-0 col-xs-10 col-xs-offset-1">
         </div>
     </div>
 
