--- a/portfolio/SalmonRun.html
+++ b/portfolio/SalmonRun.html
@@ -66,7 +66,7 @@ body {
 			</div>
 			<div class="row">
 				<div class="col-md-12 portfolio-image">
-					<a href="../assets/salmonrun.PNG"><img src="../assets/salmonrun.PNG" alt="The Salmon Run" class="center-block img-responsive"/></a>
+					<a href="../assets/salmonrun.PNG"><img src="../assets/salmonrun.PNG" width = "500" alt="The Salmon Run" class="center-block img-responsive"/></a>
 				</div>
 			</div>
 		</div>
