--- a/portfolio/ShadedRelief.html
+++ b/portfolio/ShadedRelief.html
@@ -66,7 +66,7 @@ body {
 			</div>
 			<div class="row">
 				<div class="col-md-12 portfolio-image">
-					<a href="../assets/shadedrelief_clip.PNG"><img src="../assets/shadedrelief_clip.PNG" alt="Shaded Relief" class="center-block img-responsive"/></a>
+					<a href="../assets/shadedrelief_clip.PNG"><img src="../assets/shadedrelief_clip.PNG" width ="500" alt="Shaded Relief" class="center-block img-responsive"/></a>
 				</div>
 			</div>
 		</div>
