--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
     <div>
 		    <br>
             <br>
-            <p>Hello, my name is Michael Merlini. I am a physical geographer currently studying at University of Wisconsin-Madison for GIS and Web Programming. I have previously attend Minnesota State University Mankato for my undergraduate and graduate degrees.My thesis research was focused on delveloping a distributed hydrological model for the Blue Earth River Watershed Minnesota with implications regardinig land use and water quality.</p>
+            <p>Hello, my name is Michael Merlini. I am a physical geographer currently studying at University of Wisconsin-Madison for GIS and Web Programming. I have previously attend Minnesota State University Mankato for my undergraduate and graduate degrees.My thesis research was focused on delveloping a distributed hydrological model for the Blue Earth River Watershed Minnesota with implications regarding land use and water quality.</p>
             <br>
             <p>I am well-organized and reliably self-motivated individual, with Geographic Inoformation Systems, Global Position System, Remote Sensing and Cartographic training and experience. A quick learner, who can extract and organize relevant information for research and efficiently manage multiple projects with excellent professional communication skills. Read all about my <a href="resume.html">background and experience</a>.
             </p>
