--- a/about.html
+++ b/about.html
@@ -23,10 +23,10 @@
   
 </div>
 
-<div style="padding-left:">
+
   <h2><center>MICHAEL MERLINI</center></h2>
   <p><center>Geographic Information Systems, Geographer, Global Position System Specialist</center></p>
-</div>
+
 <h1>Hello, Who am I you ask?</h1>
     <br>
     <div>
@@ -49,7 +49,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 col-md-offset-0 col-sm-3 col-sm-offset-0 col-xs-6 col-xs-offset-3">
-					<img src="assets/photo1.PNG" alt="world icon" class="img-responsive center-block" id="about-world" />
+					<img src="assets/photo1.PNG" alt="self"  />
 				</div>
 				<div class="col-md-9 col-md-offset-0 col-sm-9 col-sm-offset-0 col-xs-10 col-xs-offset-1">
         </div>
@@ -60,9 +60,13 @@
     <br>
     <br>
   <footer>
-    <p>© michaelmerlini</p>
-    <p>last updated: april 2, 2018</p>
-  </footer>
+      <ul>
+          <ul style="list-style: none;" >
+            <li>last updated: april 2, 2018</li>
+            <li>© michaelmerlini</li>
+        
+      </ul>
+  </footer
     
 </body>
 </html>
