--- a/contact.html
+++ b/contact.html
@@ -75,9 +75,13 @@ body {
     <br>
     <br>
     <br>
-    <footer>
-    <p>© michaelmerlini</p>
-    <p>last updated: april 2, 2018</p>
+   <footer>
+      <ul>
+          <ul style="list-style: none;" >
+            <li>last updated: april 2, 2018</li>
+            <li>© michaelmerlini</li>
+        
+      </ul>
   </footer>
     
 </body>
