--- a/resume.html
+++ b/resume.html
@@ -105,10 +105,13 @@
         </div>
 
       </div>
-      <footer>
-    <p>© michaelmerlini</p>
-    <p>last updated: april 2, 2018</p>
-  </footer>
+  <footer>
+      <ul>
+          <ul style="list-style: none;" >
+            <li>last updated: april 2, 2018</li>
+            <li>© michaelmerlini</li>
+        
+      </ul>
     
 </body>
 </html>
