--- a/portfolio/ShadedRelief.html
+++ b/portfolio/ShadedRelief.html
@@ -71,9 +71,12 @@ body {
 			</div>
 		</div>
   <footer>
-    <p>© michaelmerlini</p>
-    <p>last updated: april 2, 2018</p>
-  </footer>
+      <ul>
+          <ul style="list-style: none;" >
+            <li>last updated: april 2, 2018</li>
+            <li>© michaelmerlini</li>
+        
+      </ul>
     
 </body>
 </html>
