--- a/portfolio/HuntinFishin.html
+++ b/portfolio/HuntinFishin.html
@@ -43,6 +43,16 @@ body {
   background-color: greenyellow;
   color: white;
 }
+footer {
+    border-top: 1px solid black;
+    font-size: 10px;
+    position: fixed;
+    bottom:0;
+    right:0;
+    left:0;
+    width:100%;
+    background-color: white;
+}
 </style>
 </head>
 <body>
@@ -71,8 +81,11 @@ body {
 			</div>
 		</div>
   <footer>
-    <p>© michaelmerlini</p>
-    <p>last updated: april 2, 2018</p>
+      <ul>
+          <ul style="list-style: none;" >
+            <li>© michaelmerlini</li>
+            <li>last updated: april 2, 2018</li>
+      </ul>
   </footer>
     
 </body>
