--- a/portfolio/SalmonRun.html
+++ b/portfolio/SalmonRun.html
@@ -44,6 +44,16 @@ body {
   background-color: greenyellow;
   color: white;
 }
+footer {
+    border-top: 1px solid black;
+    font-size: 10px;
+    position: fixed;
+    bottom:0;
+    right:0;
+    left:0;
+    width:100%;
+    background-color: white;
+}
 </style>
 </head>
 <body>
