--- a/portfolio/SalmonRun.html
+++ b/portfolio/SalmonRun.html
@@ -85,6 +85,7 @@ footer {
           <ul style="list-style: none;" >
             <li>last updated: april 2, 2018</li>
             <li>© michaelmerlini</li>
+              <li>test</li>
         
       </ul>
     
