--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div style="padding-left:">
     <h2><center>MICHAEL MERLINI</center></h2>
-  <p><center>Geographic Information Systems, Geographer, Global Position System Specialist</center></p>
+  <p><center>Geographer, Geographic Information Systems, Global Position System Specialist</center></p>
 </div>
 
 <div class="container">
