--- a/portfolio/HuntinFishin.html
+++ b/portfolio/HuntinFishin.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="Cartography, GIS, GPS"/>
-        <title>Michael Merlini | Web Portfolio</title>
+        <title>Michael Merlini | Maps</title>
 
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
