--- a/index.html
+++ b/index.html
@@ -24,19 +24,24 @@
 </div>
 
 <div style="padding-left:">
-    <h2><center>MICHAEL MERLINI</center></h2>
+	<h2><center><strong>MICHAEL MERLINI</strong></center></h2>
   <p><center>Geographer, Geographic Information Systems, Global Position System Specialist</center></p>
 </div>
 
 <div class="container">
 			<div class="row">
-				<div class="col-md-3">
+				<div class = "col-md-6 colx-sx-12">
+					<div class ="card"
+					     <a href="portfolio/HuntinFishin.html">
+						<div class="huntinFishing" title="Hunting and Fishing by County"></div>
+					</a>
+<!-- 				<div class="col-md-3">
 					<div class="thumbnail portfolio-thumbnail">
 						<a href="portfolio/HuntinFishin.html">
 							<img src="assets/HuntinFishinbyCounty.PNG" alt="Hunting and Fishing in MN" />
 						</a>
 					</div>
-				</div>
+				</div> -->
 				<div class="col-md-4">
 					<div class="thumbnail portfolio-thumbnail">
 						<a href="portfolio/SalmonRun.html">
