--- a/index.html
+++ b/index.html
@@ -30,18 +30,13 @@
 
 <div class="container">
 			<div class="row">
-				<div class = "col-md-6 colx-sx-12">
-					<div class ="card"
-					     <a href="portfolio/HuntinFishin.html">
-						<div class="huntinFishing" title="Hunting and Fishing by County"></div>
-					</a>
-<!-- 				<div class="col-md-3">
+				<div class="col-md-3">
 					<div class="thumbnail portfolio-thumbnail">
 						<a href="portfolio/HuntinFishin.html">
 							<img src="assets/HuntinFishinbyCounty.PNG" alt="Hunting and Fishing in MN" />
 						</a>
 					</div>
-				</div> -->
+				</div>
 				<div class="col-md-4">
 					<div class="thumbnail portfolio-thumbnail">
 						<a href="portfolio/SalmonRun.html">
