--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
 						</a>
 					</div>
 				</div>
+				<div class="col-md-3">
+					<div class="thumbnail portfolio-thumbnail">
+						<a href="portfolio/HuntinFishin.html">
+							<img src="assets/HuntinFishinbyCounty.PNG" alt="Hunting and Fishing in MN" />
+						</a>
+					</div>
+				</div>
 			</div>
 		</div>
   <footer>
