--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div style="padding-left:">
 	<h2><center><strong>MICHAEL MERLINI</strong></center></h2>
-  <p><center>Geographer, Geographic Information Systems, Global Position System Specialist</center></p>
+  <p><center><strong>Geographer, Geographic Information Systems, Global Position System Specialist</strong></center></p>
 </div>
 
 <div class="container">
@@ -44,14 +44,14 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-5">
 					<div class="thumbnail portfolio-thumbnail">
 						<a href="portfolio/ShadedRelief.html">
 							<img src="assets/shadedrelief_clip.PNG" alt="Shaded Relief"/>
 						</a>
 					</div>
 				</div>
-				<div class="col-md-5">
+				<div class="col-md-6">
 					<div class="thumbnail portfolio-thumbnail">
 						<a href="portfolio/HuntinFishin.html">
 							<img src="assets/HuntinFishinbyCounty.PNG" alt="Hunting and Fishing in MN" />
@@ -61,8 +61,19 @@
 			</div>
 		</div>
   <footer>
-      <ul>
+      <div class="footer">
+          <div class="footer-content">
+                <a href="mailto:jkane@line-45.com" target="_blank"><i class="fa fa-envelope fa-3x icon"></i></a>
+                <a href="http://www.linkedin.com/in/kanejessica" target="_blank"><i class="fa fa-linkedin fa-3x icon"></i></a>
+                <a href="https://github.com/jeskane" target="_blank"><img src="assets/Github-logo.png" class="icon" id="github-logo" alt="Github Logo" /></a>
+                <a href="http://www.line-45.com" target="_blank"><img src="assets/LINE%2045-White.png" class="icon logo" alt="Line 45 Logo" /></a>
+            </div>            
+        </div>
+    </footer> 
+	  
+	  <ul>
           <ul style="list-style: none;" >
+		https://www.linkedin.com/in/michael-merlini-60a025172/  
             <li>last updated: april 18, 2021</li>
             <li>© michaelmerlini</li>
         
