--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@ body {
       <div class="row">
           <h3><strong>Email:</strong><a class="hyplink" href="mailto:merlini@wisc.edu?Subject=contact%20about%20cv"></strong> merlini@wisc.edu</a></h3>
           <h3><strong>GitHub:</strong> merlinimichael</h2>
-	  <h3><strong>LinkedIn:</strong><a class="hyplink" href="https://www.linkedin.com/in/michael-merlini-60a025172/"></strong></a> Michael Merlini LinkedIn</h2>  
+	  <h3><strong>LinkedIn:</strong><a class="hyplink" href="https://www.linkedin.com/in/michael-merlini-60a025172/"></strong>Michael Merlini LinkedIn</a></h2>  
       </div>
     </div>
     <br>
