--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<div class="col-md-6">
 					<div class="thumbnail portfolio-thumbnail">
 						<a href="portfolio/HuntinFishin.html">
-							<img src="assets/HuntinFishinbyCounty.PNG" alt="Hunting and Fishing in MN" />
+							<img src="assets/highdefinition.PNG" alt="High Definition Humminbird Lakes" />
 						</a>
 					</div>
 				</div>
