--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				</div>
 				<div class="col-md-6">
 					<div class="thumbnail portfolio-thumbnail">
-						<a href="portfolio/surveyedLakes">
+						<a href="portfolio/surveyLakes.html">
 							<img src="assets/highdefinition.PNG" alt="High Definition Humminbird Lakes" />
 						</a>
 					</div>
