--- a/portfolio/surveyLakes.html
+++ b/portfolio/surveyLakes.html
@@ -70,7 +70,8 @@ footer {
 				<div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1">
 					<h2 class="portfolio-title">Humminbird Surveyed and Non-Surveyed Lakes</h2>
 					<p class="portfolio-description">
-						This map looks at the particiaption rates by county for the state of Minnesota. The map displays both fishing and hunting participation rates for the year 2000 in a bivariate map.
+						This project developed a web application for Johnson Outdoors Customer Service Representatives. This application developed a way to access and view the surveyed and non-survyed lakes for Humminbird. 
+						It allows customer service representatives to answer customer calls and questions about what lakes are available and on what version of the chip the lake first appeared.
 					</p>
 				</div>
 			</div>
