--- a/portfolio/surveyLakes.html
+++ b/portfolio/surveyLakes.html
@@ -76,7 +76,8 @@ footer {
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-16 portfolio-image">
+				<div class="col-md-3 col-md-offset-4 col-sm-3 col-sm-offset-0 col-xs-6 col-xs-offset-3">
+				
 					<a href="../assets/highdefinition.PNG"><img src="../assets/highdefinition.PNG" width = "500" alt="Surveyed and Non-Surveyed Lakes" class="center-block img-responsive"/></a>
 				</div>
 			</div>
