--- a/portfolio/surveyLakes.html
+++ b/portfolio/surveyLakes.html
@@ -70,8 +70,10 @@ footer {
 				<div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1">
 					<h2 class="portfolio-title">Humminbird Surveyed and Non-Surveyed Lakes</h2>
 					<p class="portfolio-description">
-						This project developed a web application for Johnson Outdoors Customer Service Representatives. This application developed a way to access and view the surveyed and non-survyed lakes for Humminbird. 
-						It allows customer service representatives to answer customer calls and questions about what lakes are available and on what version of the chip the lake first appeared.
+						This project developed a web application for Johnson Outdoors Customer Service Representatives. This application developed a way to access and view the surveyed and non-survyed 
+						lakes for Humminbird. It allows customer service representatives to answer customer calls and questions about what lakes are available and on what version of the chip the lake 
+						first appeared. Additional information of the lakes is also available through a pop-up dialog box. The additional information does include what county the lake is located in, 
+						surface acres, and breif a breif description of the data.
 					</p>
 				</div>
 			</div>
