--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div style="padding-left:">
 	<h2><center><strong>MICHAEL MERLINI</strong></center></h2>
-  <p><center><strong>Geographer, Geographic Information Systems, Global Position System Specialist</strong></center></p>
+  <p><center>Geographer,<br /> Geographic Information Systems,<br /> Global Position System Specialist</center></p>
 </div>
 
 <div class="container">
