update bold text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <style>
 
 </style>
@@ -25,7 +25,7 @@
 
 <div style="padding-left:">
 	<h2><center><strong>MICHAEL MERLINI</strong></center></h2>
-  <p><center>Geographer,<br /> Geographic Information Systems,<br /> Global Position System Specialist</center></p>
+  <p><center><strong>Geographer,<br /> Geographic Information Systems,<br /> Global Position System Specialist</strong></center></p>
 </div>
 
 <div class="container">
@@ -67,7 +67,7 @@
             <li>© michaelmerlini</li>
         
       </ul>
-		  </footer>
+ </footer>
     
 </body>
 </html>
